[gd_scene load_steps=8 format=2]

[ext_resource path="res://Materials/ultraviolet_subtractive.tres" type="Material" id=1]
[ext_resource path="res://Scenes/MoonGate.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Moon.gd" type="Script" id=3]
[ext_resource path="res://Animations/moon_fly.tres" type="Animation" id=4]
[ext_resource path="res://Meshes/Wireframe/moon_wireframe.obj" type="ArrayMesh" id=5]
[ext_resource path="res://Materials/white_unlit.tres" type="Material" id=6]

[sub_resource type="CylinderMesh" id=1]

[node name="Moon" type="Spatial"]
script = ExtResource( 3 )
flight_duration = 30.0

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.56, 0 )
mesh = ExtResource( 5 )
material/0 = ExtResource( 6 )
material/1 = ExtResource( 1 )

[node name="Stick" type="MeshInstance" parent="."]
transform = Transform( -1.62921e-08, -0.25, 0, 0.1, -4.07302e-08, 0, 0, 0, 0.1, -0.651095, 0.56, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="MoonGatePivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0.56, 0 )

[node name="MoonGate" parent="MoonGatePivot" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/moon_fly = ExtResource( 4 )
[connection signal="came_to_life" from="MoonGatePivot/MoonGate" to="." method="_on_MoonGate_came_to_life"]
[connection signal="death" from="MoonGatePivot/MoonGate" to="." method="_on_MoonGate_death"]
[connection signal="animation_finished" from="AnimationPlayer" to="MoonGatePivot/MoonGate" method="_on_MoonAnimationPlayer_animation_finished"]
